adjustments to Dockerfile